--- a/index17.Css
+++ b/index17.Css
@@ -69,7 +69,7 @@ h2 span{
 }
 section i{
     position: absolute;
-    background: rgb(221, 12, 12);
+    background: #fff;
     border-radius: 50%;
     box-shadow: 0 0 10px #fff,
                  0 0 20px #fff,
